Project cards stretching bug fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,10 +30,10 @@
       hsl(30, 14%, 90%));
   --p-size: clamp(1rem, 4vh, 8rem);
   --h1-size: clamp(2rem, 5vh, 10rem);
-  --card-header-size: clamp(1.5rem, 2.5vh, 6rem);
-  --card-p-size: clamp(1rem, 1.5vh, 5rem);
-  --p-xl-size: clamp(1rem, 6vh, 8rem);
-  --h1-xl-size: clamp(2rem, 8vh, 10rem);
+  --card-header-size: clamp(1.5rem, 2.2vh, 3rem);
+  --card-p-size: clamp(1em, 1.5vh, 3rem);
+  --p-xl-size: clamp(1rem, 6vh, 6rem);
+  --h1-xl-size: clamp(2rem, 8vh, 8rem);
 }
 
 body {
@@ -378,7 +378,6 @@ nav a:focus {
 
 section {
   scroll-margin-top: 3em;
-  min-height: 100vh;
 }
 
 .intro {
@@ -637,15 +636,14 @@ h1 {
   overflow: hidden;
   /* project animation depends on this */
   border-radius: 25px;
-  width: 280px;
-  min-height: 18em;
+  width: 330px;
+  min-height: 17em;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
   background: -webkit-gradient(linear, right top, left bottom, from(var(--purp-btn)), to(var(--blue-text)));
   background: -o-linear-gradient(right top, var(--purp-btn), var(--blue-text));
   background: linear-gradient(to left bottom, var(--purp-btn), var(--blue-text));
-  ;
   color: white;
   -o-object-fit: cover;
   object-fit: cover;
@@ -666,7 +664,7 @@ h1 {
 }
 
 .new-card:not(.new-card:nth-of-type(1)):hover {
-  margin-top: 7em;
+  margin-top: 3em;
 }
 
 .new-card.effect * {
@@ -732,7 +730,7 @@ figcaption header {
 }
 
 .new-card h3 {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 
 .new-card.effect p {
@@ -820,7 +818,7 @@ figcaption header {
 .card-btn {
   display: inline-block;
   position: relative;
-  font-size: clamp(0.5rem, 2vh, 3vh);
+  font-size: clamp(0.5rem, 1.8vh, 3vh);
   padding: 0.35em 0.7em;
   border-radius: 10px;
   border: none;
@@ -1338,20 +1336,9 @@ footer {
 
   .new-card {
     width: 350px;
-    min-height: 20em;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-  }
-
-  .new-card h3 {
-    font-size: var(--h1-size);
-  }
-
-  figcaption p {
-    font-size: var(--p-size);
-    width: 90%;
-    margin: 0.5rem auto;
   }
 
   .tech {
@@ -1614,9 +1601,6 @@ footer {
     gap: 2.5em;
   }
 
-  .new-card {
-    width: 380px;
-  }
 
   /* Skills Section */
 
@@ -1726,11 +1710,6 @@ footer {
 }
 
 @media (min-width: 1250px) {
-
-  #card-3:hover,
-  #card-4:hover {
-    margin-top: 7em;
-  }
 
   .new-card:not(.new-card:nth-of-type(1)):hover,
   .new-card:not(.new-card:nth-of-type(2)):hover {
